[metadata]
name = APRG
version = TECH_DEMO-V0

[options]
packages = find:
platforms = [
                'manylinux1_x86_64',
                'macosx_10_6_x86_64',
                'win_amd64',
                'win32',
            ]

[build_apps]
include_patterns =
    **/*.bam
gui_apps =
    APRG = main.py
plugins =
    pandagl
    p3openal_audio
